<resources>
    <string name="app_name">About Me</string>
    <string name="petr_morgoun">Petr Morgoun</string>
    <string name="golden_star">Golden star for About Me page</string>
    <string name="bio">"Hey my name is Petr, and here is the lyrics to despacito:

        ¡Ay!
Fonsi, DY
Oh, oh no, oh no (oh)
Hey yeah
Diridiri, dirididi Daddy
Go!
Sí, sabes que ya llevo un rato mirándote
Tengo que bailar contigo hoy (DY)
Vi que tu mirada ya estaba llamándome
Muéstrame el camino que yo voy
Oh, tú, tú eres el imán y yo soy el metal
Me voy acercando y voy armando el plan
Solo con pensarlo se acelera el pulso (oh yeah)
Ya, ya me estás gustando más de lo normal
Todos mis sentidos van pidiendo más
Esto hay que tomarlo sin ningún apuro
Despacito
Quiero respirar tu cuello despacito
Deja que te diga cosas al oído
Para que te acuerdes si no estás conmigo
Despacito
Quiero desnudarte a besos despacito
Firmar las paredes de tu laberinto
Y hacer de tu cuerpo todo un manuscrito (sube, sube, sube)
(Sube, sube) Oh
Quiero ver bailar tu pelo
Quiero ser tu ritmo (uh oh, uh oh)
Que le enseñes a mi boca (uh oh, uh oh)
Tus lugares favoritos (favoritos, favoritos baby)
Déjame sobrepasar tus zonas de peligro (uh oh, uh oh)
Hasta provocar tus gritos (uh oh, uh oh)
Y que olvides tu apellido (dirididi Daddy)
Yo sé que estás pensándolo (eh)
Llevo tiempo intentándolo (eh)
Mami, esto es dando y dándolo
Sabes que tu corazón conmigo te hace bam bam
Sabe que esa beba 'tá buscando de mi bam bam
Ven prueba de mi boca para ver cómo te sabe
Quiero, quiero, quiero ver cuánto amor a ti te cabe
Yo no tengo prisa, yo me quiero dar el viaje
Empezamo' lento, después salvaje
Pasito a pasito, suave suavecito
Nos vamos pegando poquito a poquito
Cuando tú me besas con esa destreza
Veo que eres malicia con delicadeza
Pasito a pasito, suave suavecito
Nos vamos pegando, poquito a poquito (oh oh)
Y es que esa belleza es un rompecabezas (oh no)
Pero pa' montarlo aquí tengo la pieza (slow, oh yeah)
Despacito (yeh, yo)
Quiero respirar tu cuello despacito (yo)
Deja que te diga cosas al oído (yo)
Para que te acuerdes si no estás conmigo
Despacito
Quiero desnudarte a besos despacito (yeh)
Firmar las paredes de tu laberinto
Y hacer de tu cuerpo todo un manuscrito (sube, sube, sube)
(Sube, sube) Oh
Quiero ver bailar tu pelo
Quiero ser tu ritmo (uh oh, uh oh)
Que le enseñes a mi boca (uh oh, uh oh)
Tus lugares favoritos (favoritos, favoritos baby)
Déjame sobrepasar tus zonas de peligro (uh oh, uh oh)
Hasta provocar tus gritos (uh oh, uh oh)
Y que olvides tu apellido
Despacito
Vamo' a hacerlo en una playa en Puerto Rico
Hasta que las olas griten "Ay, bendito"
Para que mi sello se quede contigo (báilalo)
Pasito a pasito, suave suavecito (hey yeah, yeah)
Nos vamos pegando, poquito a poquito (oh no)
Que le enseñes a mi boca (uh oh, uh oh)
Tus lugares favoritos (favoritos, favoritos baby)
Pasito a pasito, suave suavecito
Nos vamos pegando, poquito a poquito
Hasta provocar tus gritos (eh-oh) (Fonsi)
Y que olvides tu apellido (DY)
Despacito"
</string>
    <string name="what_is_your_nickname">What is your nickname?</string>
    <string name="nickname"> </string>
    <string name="done_button">Done</string>
    <string name="dummy_nickname">My nickname</string>
</resources>